refactor: 기존 클래스 수정